# Healthos

./: .gitignore  README.md
app/: main.py  models.py  schemas.py
app/routers/: auth.py
backend/: .env.example  pyproject.toml
backend/app/: ai_tools.py  auth.py  cache.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  dashboard.py  reports.py  users.py
backend/tests/: test_smoke.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: NavBar.jsx  PageShell.jsx  ProtectedRoute.jsx  PulseLine.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: icons.js
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Login.jsx  Profile.jsx  ReportResults.jsx  Reports.jsx  Signup.jsx  Upload.jsx
